fix: search icon alignment issue

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -3558,6 +3558,22 @@ body {
 }
 
 .ast-search-menu-icon .astra-search-icon {
+  -js-display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   line-height: normal;
 }
 
