--- a/sass/site/header/_header-main.scss
+++ b/sass/site/header/_header-main.scss
@@ -157,6 +157,9 @@
 	}
 
 	.astra-search-icon {
+		display: flex;
+		align-items:center;
+		justify-content: center;
 		line-height: normal;
 
 		&:focus {
